--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -13,10 +13,15 @@
 </div>
 
 <%= form_for(@message) do |f| %>
-  名前:
-  <%= f.text_field :name %>
-
-  内容:
-  <%= f.text_field :body %>
-  <%= f.submit class: "btn btn-sm btn-primary" %>
+  <form>
+  <div class="form-group">
+    <label for="exampleInputName1">名前</label>
+    <input type="Name" class="form-control" id="exampleInputName1" placeholder="Name">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputMessage1">内容</label>
+    <input type="Message" class="form-control" id="exampleInputMessage1" placeholder="Message">
+  </div>
+  <button type="submit" class="btn btn-default">送信</button>
+</form>
 <% end %>
