--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -5,7 +5,7 @@
     
   <div class="panel-body">
     <% @messages.each do |message| %>
-      <span class="label label-info"><%= message.name %></span>
+      <span class="label label-info"></span><%= message.name %></span>
       <%= message.body %>
       <br>
     <% end %>
@@ -13,14 +13,14 @@
 </div>
 
 <%= form_for(@message) do |f| %>
-  <form>
+<form>
   <div class="form-group">
-    <label for="exampleInputName1">名前</label>
-    <input type="Name" class="form-control" id="exampleInputName1" placeholder="Name">
+    <label for="message_name">名前</label>
+    <input type="text" name="message[name]" class="form-control" id="message_name" placeholder="名前">
   </div>
   <div class="form-group">
-    <label for="exampleInputMessage1">内容</label>
-    <input type="Message" class="form-control" id="exampleInputMessage1" placeholder="Message">
+    <label for="message_body">内容</label>
+    <textarea type="text"  name="message[body]" class="form-control" id="message_body" placeholder="内容"></textarea>
   </div>
   <button type="submit" class="btn btn-default">送信</button>
 </form>
