--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -1,3 +1,10 @@
+.field_with_errors{
+  width: 100%;
+  display: inline-block;
+  border: 1px solid #f00;
+}
+
+
 // Place all the styles related to the messages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
