--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -12,9 +12,9 @@
   </div>
 </div>
 
-<%= form_for(@message) do |f| %>
+<%= form_for(@message, html: {class: "form-horizontal"}) do |f| %>
 <!-- エラーメッセージの表示 -->
-<% if @message.errors.present? %>
+　<% if @message.errors.present? %>
     <div class="alert alert-danger">
       <%= alert %>
       <ul>
@@ -29,13 +29,21 @@
 
 <form>
   <div class="form-group">
-    <label for="message_name">名前</label>
-    <input type="text" name="message[name]" class="form-control" id="message_name" placeholder="名前">
+    <label for="message_name" class="col-sm-2 control-label">名前</label>
+    <div class="col-sm-6">
+        <%= f.text_field :name, class: "form-control" %>
+    </div>
+    <div class="col-sm-4"></div>
   </div>
+
   <div class="form-group">
-    <label for="message_body">内容</label>
-    <textarea type="text"  name="message[body]" class="form-control" id="message_body" placeholder="内容"></textarea>
+    <label for="message_body" class="col-sm-2 control-label">内容</label>
+    <div class="col-sm-6">
+        <%= f.text_area :body, class: "form-control" %>
+    </div>
+    <div class="col-sm-4"></div>
   </div>
+
   <button type="submit" class="btn btn-default">送信</button>
 </form>
 <% end %>
