--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -12,7 +12,7 @@
   </div>
 </div>
 
-<%= form_for(@message, html: {class: "form-horizontal"}) do |f| %>
+<%= form_for(@message) do |f| %>
 <!-- エラーメッセージの表示 -->
 　<% if @message.errors.present? %>
     <div class="alert alert-danger">
@@ -29,21 +29,13 @@
 
 <form>
   <div class="form-group">
-    <label for="message_name" class="col-sm-2 control-label">名前</label>
-    <div class="col-sm-6">
-        <%= f.text_field :name, class: "form-control" %>
-    </div>
-    <div class="col-sm-4"></div>
+    <label for="message_name">名前</label>
+    <input type="text" name="message[name]" class="form-control" id="message_name" placeholder="名前">
   </div>
-
   <div class="form-group">
-    <label for="message_body" class="col-sm-2 control-label">内容</label>
-    <div class="col-sm-6">
-        <%= f.text_area :body, class: "form-control" %>
-    </div>
-    <div class="col-sm-4"></div>
+    <label for="message_body">内容</label>
+    <textarea type="text"  name="message[body]" class="form-control" id="message_body" placeholder="内容"></textarea>
   </div>
-
   <button type="submit" class="btn btn-default">送信</button>
 </form>
 <% end %>
