--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -11,21 +11,10 @@
     <% end %>
   </div>
 </div>
+<%# 部分テンプレートを読み込んでいる:render '部分テンプレート名（ここでは_form）' %>
+<%= render 'form' %>
 
 <%= form_for(@message) do |f| %>
-<!-- エラーメッセージの表示 -->
-　<% if @message.errors.present? %>
-    <div class="alert alert-danger">
-      <%= alert %>
-      <ul>
-        <% @message.errors.full_messages.each do |full_message| %>
-          <li>
-            <%= full_message %>
-          </li>
-        <% end %> 
-      </ul>
-    </div>
-  <% end %>
 
 <form>
   <div class="form-group">
