--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -14,5 +14,17 @@
       </ul>
     </div>
   <% end %>
-<% end %>  
 
+
+<form>
+  <div class="form-group">
+    <label for="message_name">名前</label>
+    <input type="text" name="message[name]" class="form-control" id="message_name" placeholder="名前">
+  </div>
+  <div class="form-group">
+    <label for="message_body">内容</label>
+    <textarea type="text"  name="message[body]" class="form-control" id="message_body" placeholder="内容"></textarea>
+  </div>
+  <button type="submit" class="btn btn-default">送信</button>
+</form>
+<% end %>
