--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -7,24 +7,14 @@
     <% @messages.each do |message| %>
       <span class="label label-info"></span><%= message.name %></span>
       <%= message.body %>
+       (<%= link_to "edit" , edit_message_path(message) %>
+       <%= link_to "destroy" , message , method: :delete, 
+       data: { confirm: '削除してもよろしいですか？' } %>)
       <br>
     <% end %>
   </div>
 </div>
+
 <%# 部分テンプレートを読み込んでいる:render '部分テンプレート名（ここでは_form）' %>
 <%= render 'form' %>
 
-<%= form_for(@message) do |f| %>
-
-<form>
-  <div class="form-group">
-    <label for="message_name">名前</label>
-    <input type="text" name="message[name]" class="form-control" id="message_name" placeholder="名前">
-  </div>
-  <div class="form-group">
-    <label for="message_body">内容</label>
-    <textarea type="text"  name="message[body]" class="form-control" id="message_body" placeholder="内容"></textarea>
-  </div>
-  <button type="submit" class="btn btn-default">送信</button>
-</form>
-<% end %>
