--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -18,6 +18,10 @@
 
 <form>
   <div class="form-group">
+    <label for="message_age">年齢</label>
+    <input type="integer" name="message[age]" class="form-control" id="message_age" placeholder="年齢">
+  </div>
+  <div class="form-group">
     <label for="message_name">名前</label>
     <input type="text" name="message[name]" class="form-control" id="message_name" placeholder="名前">
   </div>
