--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -5,7 +5,7 @@
     
   <div class="panel-body">
     <% @messages.each do |message| %>
-      <%= message.age %>
+      <span class="label label-success" ><%= message.age %>歳</span>
       <span class="label label-info" ><%= message.name %></span>
       <%= message.body %>
        (<%= link_to "edit" , edit_message_path(message) %>
